--- a/AzureIoT/CattbotIoTHubDemo/CattbotIoTHubDemoWpf/MainWindow.xaml
+++ b/AzureIoT/CattbotIoTHubDemo/CattbotIoTHubDemoWpf/MainWindow.xaml
@@ -18,7 +18,8 @@
             <Button Name="btnStop" Margin="4" Width="100" Click="btnStop_Click">Stop</Button>
             <Label>Speed:</Label>
             <Slider Name="sldSpeedPct" Minimum="0" Maximum="100" Value="20" ValueChanged="SldSpeedPct_OnValueChanged"/>
-            <CheckBox Name="chkSendToAzure" Margin="5,10,5,5" IsChecked="False" Unchecked="chkSendToAzure_Checked" Checked="chkSendToAzure_Checked">Send to Azure</CheckBox>
+            <CheckBox Name="chkLeftMotorEnabled" IsChecked="True">Left Motor</CheckBox>
+            <CheckBox Name="chkRightMotorEnabled" IsChecked="True">Right Motor</CheckBox>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="2"  Margin="109,0,0,0">
             <StackPanel Orientation="Horizontal">
@@ -58,6 +59,8 @@
                 <TextBox Name="txtUpdateInterval" Margin="5,5,5,5" Width="50">1000</TextBox>
                 <Button Name="btnUpdateInterval" Click="btnUpdateInterval_Click">Update</Button>
             </StackPanel>
+            <CheckBox Name="chkSendToAzure" Margin="0,5,0,0" IsChecked="False" Unchecked="chkSendToAzure_Checked" Checked="chkSendToAzure_Checked">Send to Azure</CheckBox>
+            <TextBlock Name="ErrorMsg" Margin="0,10,0,0" HorizontalAlignment="Center" Foreground="Red"/>
         </StackPanel>
     </Grid>
 </Window>
